fix: fix discount visibility for single product

--- a/client/src/styles/_product-showcase.scss
+++ b/client/src/styles/_product-showcase.scss
@@ -47,13 +47,6 @@
   gap: 1rem;
   text-align: center;
 
-  span {
-    color: gray;
-    margin-right: 0.5rem;
-    font-size: 1.2rem;
-    text-decoration: line-through;
-  }
-
   p {
     display: -webkit-box;
     -webkit-line-clamp: 2;
